[tool.poetry]
name = "bigdict"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.6"
rich = "^13.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
